# Fuchi

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
