[package]
name = "fuchi"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33

[[bin]]
name = "fuchi"
test = true
bench = false

# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
